--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,22 +37,13 @@
     <!--MENU PRINCIPAL-->
     <string name="CerrarSesion">Salir</string>
 
-
     <!--ACTIVIDAD LOGIN-->
     <string name="txtIniciarSesion">Iniciar Sesion</string>
     <string name="txtCorreoLogin">Correo electrónico</string>
     <string name="txtPasswordLogin">Contraseña</string>
     <string name="btnLogin">Ingresar</string>
     <string name="txtNuevoUsuario">¿No tienes una cuenta?</string>
-    <string name="title_activity_main_menu">MainMenuActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <!--Toolbar-->
+
 </resources>
